[tool.poetry]
name = "scrapy-konne"
version = "0.2.2"
description = ""
authors = ["dream2333 <vincentqng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
scrapy = "^2.11.1"
aiohttp = {extras = ["speedups"], version = "^3.9.5"}
redis = {extras = ["hiredis"], version = "^5.0.4"}
ormsgpack = "^1.5.0"
pymongo = "^4.7.1"
tzdata = "^2024.1"
tabulate = "^0.9.0"
wcwidth = "^0.2.13"
mmh3 = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
