[tool.poetry]
name = "scrapy-konne"
version = "0.4.1"
description = ""
authors = ["dream2333 <vincentqng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
scrapy = "^2.11.2"
aiohttp = "^3.9.5"
redis = {extras = ["hiredis"], version = "^5.0.4"}
ormsgpack = "^1.5.0"
pymongo = "^4.7.3"
tzdata = "^2024.1"
tabulate = "^0.9.0"
wcwidth = "^0.2.13"
mmh3 = "^4.1.0"
python-dateutil = "^2.9.0.post0"
lxml-html-clean = "^0.1.1"
aio-pika = "^9.4.1"
orjson = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
